--- a/style/main.css
+++ b/style/main.css
@@ -40,3 +40,19 @@
 }
 
 #map-page, #map-canvas { width: 100%; height: 100%; padding: 0; }
+
+#nearby-status-message{
+    margin-top: 6px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    padding-right: 5px;
+    font-weight: normal;
+    font-size: 90%;
+    height: 33px;
+}
+
+#nearby-refresh-button{
+    float:right;
+    margin-right: -8px;
+    margin-left: 8px;
+}
