--- a/style/main.css
+++ b/style/main.css
@@ -42,17 +42,32 @@
 #map-page, #map-canvas { width: 100%; height: 100%; padding: 0; }
 
 #nearby-status-message{
-    margin-top: 6px;
+    margin-top: 3px;
     margin-bottom: 0px;
     margin-left: 0px;
     padding-right: 5px;
     font-weight: normal;
     font-size: 90%;
     height: 33px;
+    line-height: 150%;
 }
 
 #nearby-refresh-button{
     float:right;
     margin-right: -8px;
     margin-left: 8px;
+}
+
+#nearby-intro-block{
+    box-shadow: 5px 5px 15px 5px #888888;
+}
+
+#nearby-intro-block .ui-bar{
+    border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
+}
+#nearby-intro-block .ui-body{
+    border-bottom-left-radius: inherit;
+    border-bottom-right-radius: inherit;
+    border-top-width: 0;
 }
