--- a/style/main.css
+++ b/style/main.css
@@ -39,7 +39,35 @@
     text-align: center;
 }
 
-#map-page, #map-canvas { width: 100%; height: 100%; padding: 0; }
+#map-page{
+    width: 100%;
+    height: 100%;
+    padding: 0;
+}
+
+#map-page .ui-content{
+    padding: 0;
+    position : absolute !important; 
+    top : 44px !important;  
+    right : 0; 
+    bottom : 0px !important;  
+    left : 0 !important;
+    /*
+    position:relative;
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    */
+}
+
+#map-canvas {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+}
+
+
+
 
 #nearby-status-message{
     margin-top: 3px;
@@ -71,3 +99,4 @@
     border-bottom-right-radius: inherit;
     border-top-width: 0;
 }
+    
